<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PaperClip</string>
    <string name="app_version">v0.0.1</string>

    <string name="createProject">Создать проект</string>
    <string name="projectName">Название проекта</string>
    <string name="create">Создать</string>
    <string name="cancel">Отмена</string>

    <string name="exit">Выход</string>
    <string name="areYouSureYouWantToGetOut">Вы уверены, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="exitToMainMenu">Выход в главное меню</string>
    <string name="areYouSureYouWantToGetOutInMainMenu">Вы уверены, что хотите выйти в главное меню?</string>

    <string name="save">Сохранить</string>
    <string name="remove">Удалить</string>

    <string name="createPage">Создать страницу</string>
    <string name="deletePage">Удалить страницу</string>
    <string name="renamePage">Переименовать страницу</string>
    <string name="namePage">Название страницы</string>

    <string name="view">Просмотреть</string>

    <string name="creator">Разработчик</string>

    <string name="undo">Отменить</string>
    <string name="redo">Вернуть</string>

    <string name="goLeft">Влево</string>
    <string name="goRight">Вправо</string>
    <string name="goUp">Вверх</string>
    <string name="goDown">Вниз</string>

    <string name="copy">Скопировать</string>
    <string name="paste">Вставить</string>
    <string name="select">Выборка</string>
    <string name="select_all">Выбрать все</string>

    <string name="editor">Редактор</string>
    <string name="lineBreaks">Горизонтальный скролл</string>
    <string name="textSize">Размер текста</string>
    <string name="paddings">Отступы</string>
    <string name="enterPaddings">Введите размер отступов (Пиксели)</string>

    <string name="app">Приложение</string>
    <string name="settings">Настройки</string>
    <string name="theme">Тема</string>
    <string name="language">Язык</string>
    <string name="selectTheme">Ввберите тему</string>
    <string name="enterTextSize">Введите размер текста</string>
    <string name="selectLanguage">Выберите язык</string>
    <string name="light">Светлая</string>
    <string name="dark">Тёмная</string>
    
    
    <string name="autoCompletionOfBrackets">Авто дополнение скобок</string>
</resources>
